# P-manager

./: CMakeLists.txt  README.md
include/: context.h  context1.h  hashPass.h
src/: addUser.c  auth.c  authHandle.c  context.c  context1.c  cryptoHandle.c  fileHandle.c  fileHandles.c  jsonHandle.c  main.c  promptPassword.c  sha3.c  vaultHandle.c
test/: fileTest.c  ftest.c  hashTest.c  jsonTest.c
